--- a/javascript.html
+++ b/javascript.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     Digite seu nome:
-    <input type="text" id="nome" onchange="Confirmar();">
+    <input type="text" id="nome" onkeyup="Confirmar();">
     <button class="BT" onclick="Confirmar();">OK</button>
     <button class="BT" onclick="MostrarJanela();">Janela</button>
     <button class="BT" onclick="Somar();"><img src="+.png" width="9px"></button>
